set (LIBOPENPMD_SOURCES
	common.c
	p86.c
)

add_library (openpmd ${LIBOPENPMD_SOURCES})
target_include_directories (openpmd PUBLIC ${INCLUDE_PATH})
install (TARGETS openpmd
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
